refactor: se adiciono dtos a otencion de plan nutricional
